--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ div[class="left-col"]
 {
     
     width: 200px;
-    height: 1120px;
+    height: 1230px;
     /*background-color:dodgerblue;*/
     background-image: url(main-upper_02.jpg);
     background-repeat: no-repeat;
@@ -40,7 +40,7 @@ span[class="center-col"]
 {
     
     width: 798px;
-    height: 1120px;
+    height: 1230px;
     background-color:beige;
     float:left;
     /*border: 2px solid red;*/
@@ -53,7 +53,7 @@ div[class="right-col"]
 {
     
     width: 200px;
-    height: 1120px;
+    height: 1230px;
     background-color:aqua;
     float: right;
     border: 1px solid black;
@@ -422,5 +422,33 @@ a:hover
     background-color: black;
 }
 
+span[class="center-col-heading-links"]
+{
+    
+    color: #002A80;
+    text-align: center;
+    height: 30px;
+    font-weight: bold;
+    font-size: 17.0pt;
+    font-family: "Times New Roman";
+    display: block;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 100px;
+    background-image: url(middle-head-bg.jpg);
+    
+}
 
+div[class="content-links"]
+{
+    margin-left: 30px;
+    margin-top: 2px;
+    text-align:center;
+    line-height: 20px;
+}
+a:visited{
+    color:blue;
+    
+    
+}
 
